--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/master.css"/>
-    <title>Document</title>
+    <title>jamin's blog</title>
 </head>
 
 <body>
