--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>我的博客</title>
+<title>我的博客-</title>
 </head>
 <style>
        body { background: #FFF; color: #000; font-size: 16px; font-style: normal; font-family:'Microsoft Yahei','寰蒋闆呴粦','Simsun','瀹嬩綋','Arial', sans-serif;}
@@ -24,7 +24,7 @@
              float:left;
              padding:15px 10px 0px 115px;
              width: 200px;
-             
+             color: #fdffd3;
        }
        .div1 {
              width:100%;
@@ -38,14 +38,14 @@
        
        }
     .pic1{
-        width: 734px;
+        width: 100%;
         height: 530px;
     }
       p{
          text-indent:2em;
       } 
       .div3{
-           font-size: 18px;
+           font-size: 20px;
            text-align:center;
       }
 </style>
@@ -61,7 +61,7 @@
      <p>世界这么大，我想去看看，这个话一热，好像兴起了一股辞职热潮。
 在现实生活中，我也不例外，在这里已经整整27个月，有过彷徨，有过失落，有过不知所谓，其实做什么不重要，重要的是要做好，如何对这27个月进行总结，如果用一个坐标系来说明我做得怎样，那就是这样:
 </p>
-    <div style="width: 734px;height: 530px;"><img class="pic1" src="p1.png"/></div>
+    <div style="width: 100%;height: 530px;"><img class="pic1" src="p1.png"/></div>
      <p>诚然，状态起起伏伏，当中因素挺多，诸如待人接物，人情练达。
 这27个月，是大学毕业后重新认识自己一个过程，很庆幸的，我越来越清楚自己以后要干什么，该做什么，当然最重要离不开两字：坚持。</p>
      <p>相识就是缘分；</p>
