--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>我的博客-</title>
+<title>我的博客-岁月匆匆</title>
 </head>
 <style>
        body { background: #FFF; color: #000; font-size: 16px; font-style: normal; font-family:'Microsoft Yahei','寰蒋闆呴粦','Simsun','瀹嬩綋','Arial', sans-serif;}
@@ -41,7 +41,7 @@
         width: 100%;
         height: 300px;
     }
-      p{
+      p {
          text-indent:2em;
       } 
       .div3{
@@ -55,7 +55,7 @@
        <img  style="width: 80px;height: 80px; border-radius:50%;" src="t1.jpg"/>
     </div>
     <span class="head-text">jamin</span>
-    <span class="head-text">无折腾，不人生</span>
+    <span class="head-text">无折腾，不人生...</span>
 </div>
 <div class="div1" id="div1">
      <p>世界这么大，我想去看看，这个话一热，好像兴起了一股辞职热潮。
@@ -66,12 +66,13 @@
 这27个月，是大学毕业后重新认识自己一个过程，很庆幸的，我越来越清楚自己以后要干什么，该做什么，当然最重要离不开两字：坚持。</p>
      <p>相识就是缘分；</p>
      <p>感恩那些帮助过我；</p>
-     <p>感恩那些帮助过我；</p>
+     <p>感恩那些"坏人"</p>
      <p>感恩你们的包容； </p>
      <p>感恩你们给予的机会，又是我的挑战；</p>
      <p>感恩有心人；</p>
      <p>感恩我敬畏的人；</p>
      <p>THANKS</p>
+     <p>....</p>
       
 </div>
    
@@ -87,7 +88,7 @@
       var oDiv=document.getElementById("div1");
       
       oBtn.onclick=function(){
-          oDiv.style.minHeight="1000px";
+          oDiv.style.minHeight="750px";
           oBtn.style.display="none";
       }
 </script>
